--- a/front-web/package.json
+++ b/front-web/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "@types/react-modal": "^3.12.0",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "miragejs": "^0.1.41",
     "polished": "^4.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.0.5",
     "react-modal": "^3.12.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
